test/fail/confidential-access.grace
object {
  method name is confidential {}
}.name
